# mentorship-da

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  streamlit-app.py
01ReformattingGA4/: clean.ipynb  new.py
02ReformattingUmami/: clean_umami.ipynb  parsing urls.ipynb
03AnalysisApplicationData/: demo.ipynb  main.ipynb  main.py
03AnalysisApplicationData/data/: main_.py  wave1.py  wave2.py
04URLsInPostgreSQL/: analysis of the sql data.ipynb  parsing urls class.py  parsing urls script.py  parsing urls.ipynb  presenting data.ipynb
analysis_application_data/: main.ipynb
howard's advisory stuff/: collating fields.ipynb  getting data.ipynb  presenting data.ipynb
howard's advisory stuff/exported_csv/: _event_old  _prisma_migrations  analysis of the sql data.ipynb  event_data  parsing urls.ipynb  session  team  team_user  team_website  user  v1_account  v1_event  v1_event_data  v1_prisma_migration  v1_session  v1_website  website
howard's advisory stuff/new/: clean.ipynb
