[tool.poetry]
name = "mentorship-da"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "mentorship_da"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.0.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
nbdime = "^3.2.1"
black = "^23.7.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
